# confidential-federated-compute

./: .bazelignore  .bazelrc  .gitignore  .gitmodules  BUILD  CONTRIBUTING.md  Cargo.toml  MODULE.bazel  README.md  WORKSPACE  cargo-bazel-lock.json  cargo-no-std-bazel-lock.json  cargo-no-std-no-avx-bazel-lock.json  crates.bzl  extensions.bzl  proto_data.bzl  requirements.in  requirements.txt  requirements_lock.txt  requirements_lock_3_10.txt  stub_repo.bzl  stub_tf_proto_library.bzl
containers/gcp/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  WORKSPACE  attestation_policy.proto  attestation_token_provider.cc  attestation_token_provider.h  attestation_token_verifier.cc  attestation_token_verifier.h  batched_inference.proto  batched_inference_engine.h  batched_inference_gcp_main.cc  batched_inference_oak_main.cc  build_and_push_server_image.sh  build_client_image.sh  build_defs.bzl  cargo-bazel-lock.json  client.cc  client.h  client_session_config.h  generate_client_metadata.py  generate_policy.py  http_client.cc  http_client.h  json_parsing_utils.cc  json_parsing_utils.h  llama_cpp_batched_inference_engine.cc  llama_cpp_batched_inference_engine.h  model_targets.bzl  oak_session_utils.cc  oak_session_utils.h  proto_parsing_utils.cc  proto_parsing_utils.h  provenance_lib.py  repo_rules.bzl  requirements.txt  server.cc  server.h  (+4 more)
containers/gcp_prototype/: .bazelrc  BUILD  Dockerfile  MODULE.bazel  README.md  WORKSPACE  attestation.cc  attestation.h  build_defs.bzl  client_session_config.h  client_session_config.rs  http_client.cc  http_client.h  inference.proto  inference_engine.cc  inference_engine.h  json_util.cc  json_util.h  main.cc  policy.proto  proto_util.cc  proto_util.h  repo_rules.bzl  server_session_config.h  server_session_config.rs  session_utils.cc  session_utils.h  test_client.cc  test_client.proto  verifier.cc  verifier.h
containers/mauve_score/: BUILD  MODULE.bazel  compute_mauve_score_lib.py  compute_mauve_score_lib_test.py  main.cc  mauve_score_fn.cc  mauve_score_fn.h  mauve_score_fn_test.cc  py_mauve_delegate.cc  py_mauve_delegate.h  requirements.in  requirements_lock.txt  utils.cc  utils.h
containers/minimum_jax/: .bazelrc  BUILD  MODULE.bazel  README.md  confidential_transform_server.cc  confidential_transform_server.h  main.cc  python_path.bzl  requirements.in  requirements_lock.txt  tokens.py
containers/minimum_llama_cpp/: .bazelrc  .gitignore  BUILD  MODULE.bazel  README.md  main.cc
containers/minimum_pytorch/: BUILD  MODULE.bazel  README.md  bookworm.lock.json  bookworm.yaml  main.py  requirements.in  requirements_lock.txt
containers/minimum_rules_cuda/: .bazelrc  BUILD  Dockerfile  MODULE.bazel  README.md  kernel.cu  kernel.h  main.cc  test_cuda.proto
containers/private_evolution/nn_histogram/: .bazelrc  BUILD  MODULE.bazel  main.cc  nn_histogram_fn.cc  nn_histogram_fn.h  nn_histogram_fn_test.cc  utils.cc  utils.h  utils_test.cc
containers/private_evolution/sentence_transformers/: .bazelrc  BUILD  MODULE.bazel  archive_utils.cc  archive_utils.h  archive_utils_test.cc  embedding_fn.cc  embedding_fn.h  embedding_fn_test.cc  generate_embedding.py  main.cc  (+8 more)
containers/private_inference/: .bazelrc  BUILD  MODULE.bazel  batched_inference_pi_oak_main.cc  oak_session_utils.cc  oak_session_utils.h  pi_batched_inference_provider.cc  pi_batched_inference_provider.h  pi_batched_inference_provider_test.cc  pi_client.cc  pi_client.h  pi_client_test.cc  public_keys_prod_proto.binarypb  session_config.rs  sysroot.bzl
containers/willow/: .bazelrc  .rustfmt.toml  BUILD  GEMINI.md  MODULE.bazel  README.md  main.cc  session.cc  session.h  transform_service.cc  transform_service.h  willow_op.proto  willow_session.cc  willow_session.h  willow_transform_service.cc  willow_transform_service.h  willow_transform_service_test.cc
examples/square_enclave_app/: BUILD  Cargo.toml  README.md  build.rs
examples/square_service/: BUILD  Cargo.toml  README.md
examples/sum_enclave_app/: BUILD  Cargo.toml  README.md
examples/sum_service/: BUILD  Cargo.toml  README.md
kms/: .bazelrc  .rustfmt.toml  BUILD  MODULE.bazel  README.md  WORKSPACE  cargo-bazel-lock.json  crates.bzl  insecure_reference_values.txtpb  key_derivation_test.rs  key_management_service_test.rs  main.rs  prost_proto_conversion.rs  release_tokens_test.rs  session_config.rs  storage_client_test.rs  storage_test.rs
kms/attestation_transparency_service/: BUILD  attestation_transparency_service.rs  attestation_transparency_service_test.rs  payload_signer.rs
kms/key_management_service/: BUILD  access_policies.rs  access_policies_test.rs  key_derivation.rs  key_derivation_test.rs  key_management_service.rs  key_management_service_test.rs  release_tokens.rs  release_tokens_test.rs
kms/reference_values/: BUILD  README.md  reference_values.txtpb
kms/storage_service/: BUILD  session_config.rs  storage.proto  storage.rs  storage_actor.rs  storage_actor_test.rs  storage_client.rs  storage_client_test.rs  storage_test.rs
kms/testing/: BUILD  matchers.rs  session_test_utils.rs
kms/toolchains/: BUILD
ledger_enclave_app/: BUILD  Cargo.toml  README.md
ledger_enclave_app/images/: components.dot
ledger_enclave_app/src/: main.rs
ledger_service/: BUILD  Cargo.toml  README.md  build.rs  insecure_reference_values.txtpb
ledger_service/proto/: replication.proto
ledger_service/src/: actor.rs  attestation.rs  blobid.rs  budget.rs  lib.rs  range_budget.rs  test_util.rs
ledger_service/testdata/: BUILD  endorsements.txtpb  endorsements_20241121.binarypb  endorsements_20250213.binarypb  endorsements_20250221.binarypb  evidence.txtpb  evidence_20241121.binarypb  evidence_20250213.binarypb  evidence_20250221.binarypb
ledger_service/tests/: integration_test.rs
pipeline_transforms/: BUILD  Cargo.toml  README.md  build.rs
pipeline_transforms/proto/: BUILD  pipeline_transform.proto
pipeline_transforms/src/: io.rs  lib.rs
replicated_ledger_enclave_app/: BUILD  Cargo.toml  README.md  build.rs
replicated_ledger_enclave_app/src/: main.rs
tools/explain_fcp_attestation_record/: BUILD  Cargo.toml
(+759 files in other folders)
