cargo-features = ["trim-paths"]

[workspace]
resolver = "2"
members = [
  "cfc_crypto",
  "examples/square_enclave_app",
  "examples/square_service",
  "examples/sum_enclave_app",
  "examples/sum_service",
  "ledger_enclave_app",
  "ledger_service",
  "pipeline_transforms",
  "third_party/federated_compute",
]

[profile.release]
strip = "debuginfo" # Debug info is not always deterministic.
trim-paths = "all"  # Remove path prefixes outside the workspace root.

[workspace.dependencies]
micro_rpc = { git = "https://github.com/project-oak/oak", rev = "1727a77e16b815ca01e7de2a54cb4482a4b5cfaa" }
micro_rpc_build = { git = "https://github.com/project-oak/oak", rev = "1727a77e16b815ca01e7de2a54cb4482a4b5cfaa" }
oak_attestation = { git = "https://github.com/project-oak/oak", rev = "1727a77e16b815ca01e7de2a54cb4482a4b5cfaa" }
oak_attestation_verification = { git = "https://github.com/project-oak/oak", rev = "1727a77e16b815ca01e7de2a54cb4482a4b5cfaa" }
oak_proto_rust = { git = "https://github.com/project-oak/oak", rev = "1727a77e16b815ca01e7de2a54cb4482a4b5cfaa" }
oak_restricted_kernel_sdk = { git = "https://github.com/project-oak/oak", rev = "1727a77e16b815ca01e7de2a54cb4482a4b5cfaa" }
